--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB src_files "src/*.c"
         "src/db/*.cpp")
 
 LIST(APPEND LIBS "pthread" "sqlite3" "boost_program_options" "boost_system" "event")
-
+add_definitions(-Wall)
 
 add_executable(udpt ${src_files})
 target_link_libraries(udpt ${LIBS})
