--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ project(udpt)
 cmake_minimum_required(VERSION 3.2)
 enable_testing()
 
+set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -9,13 +10,13 @@ file(GLOB src_files "src/*.c"
         "src/*.cpp"
         "src/db/*.cpp")
 
-LIST(APPEND LIBS "pthread" "sqlite3" "boost_program_options" "boost_system" "event")
+LIST(APPEND LIBS "pthread" "sqlite3" "boost_program_options" "boost_system" "event" "event_pthreads")
 add_definitions(-Wall)
 
 add_executable(udpt ${src_files})
 target_link_libraries(udpt ${LIBS})
 
-add_executable(udpt_tests tests/main.cpp ${src_files})
+add_executable(udpt_tests EXCLUDE_FROM_ALL tests/main.cpp ${src_files})
 target_compile_definitions(udpt_tests PRIVATE TEST=1)
 
 target_link_libraries(udpt_tests gtest ${LIBS})
