Docker sample conf: minor comment improvements.

--- a/udpt.docker.conf
+++ b/udpt.docker.conf
@@ -1,5 +1,5 @@
 # This is a sample configuration file that can
-# be used with docker.
+# be used with Docker.
 
 [db]
 driver=sqlite3
@@ -19,8 +19,8 @@ enable=yes
 port=8081
 
 # WARNING: This shouldn't be exposed to untrusted users!
-# The following is only safe if used with docker (where docker only exposes to
-# 127.0.0.1)
+# The following is only safe if used within Docker containers
+# (where Docker only exposes to 127.0.0.1)
 iface=0.0.0.0
 
 [logging]
