--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,11 @@ lto = "fat"
 [dependencies]
 serde = {version = "1.0", features = ["derive"]}
 bincode = "1.2"
-actix-web = "0.7"
-actix-net = "0.2"
+warp = {version = "0.2", default-features = false}
+tokio = {version = "0.2", features = ["macros", "net", "rt-threaded", "fs", "sync", "blocking", "signal"]}
 binascii = "0.1"
 toml = "0.5"
 clap = "2.33"
 log = "0.4"
 fern = "0.6"
-num_cpus = "1.13"
 serde_json = "1.0"
-bzip2 = "0.3"
-futures = "0.1"
-lazy_static = "1.4"
