--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ clap = "2.33"
 log = "0.4"
 fern = "0.6"
 serde_json = "1.0"
+futures = "0.3"
+async-compression = {version = "0.3", features = ["bzip2", "futures-bufread", "futures-write"]}
