add multithreaded udp send with tokio

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,12 @@ tokio = {version = "0.2", features = ["macros", "net", "rt-threaded", "fs", "syn
 binascii = "0.1"
 toml = "0.5"
 clap = "2.33"
-log = "0.4"
+log = {version = "0.4", features = ["release_max_level_info"]}
 fern = "0.6"
 serde_json = "1.0"
 futures = "0.3"
 async-compression = {version = "0.3", features = ["bzip2", "futures-bufread", "futures-write"]}
+chrono = "0.4"
+
+[patch.crates-io]
+tokio = {git = "https://github.com/naim94a/tokio", branch = "tokio-with-trysendto", features = ["macros", "net", "rt-threaded", "fs", "sync", "blocking", "signal"]}
