--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,24 @@ edition = "2021"
 lto = "fat"
 
 [dependencies]
-serde = {version = "1.0", features = ["derive"]}
+serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3"
-warp = {version = "0.3", default-features = false}
-tokio = {version = "1.19", features = ["macros", "io-util", "net", "time", "rt-multi-thread", "fs", "sync", "signal"]}
+warp = { version = "^0.3.6", default-features = false }
+tokio = { version = "1.36", features = [
+    "macros",
+    "io-util",
+    "net",
+    "time",
+    "rt-multi-thread",
+    "fs",
+    "sync",
+    "signal",
+] }
 binascii = "0.1"
-toml = "0.5"
-clap = "3.2"
-log = {version = "0.4", features = ["release_max_level_info"]}
+toml = "0.8.10"
+clap = "4.5"
+log = { version = "0.4", features = ["release_max_level_info"] }
 fern = "0.6"
 serde_json = "1.0"
-async-compression = {version = "^0.3.8", features = ["bzip2", "tokio"]}
+async-compression = { version = "^0.4.6", features = ["bzip2", "tokio"] }
 chrono = "0.4"
