--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,6 +1,6 @@
 edition = "2018"
 brace_style = "PreferSameLine"
-fn_args_layout = "compressed"
+fn_params_layout = "compressed"
 force_multiline_blocks = true
 max_width = 125
 overflow_delimited_expr = true
